Use npm repo version of botbuilder-adapter-trovo
Switched from local folder to npm repo

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     },
     "dependencies": {
         "botbuilder": "^4.11.0",
-        "botbuilder-adapter-trovo": "file:botbuilder-adapter-trovo",
+        "botbuilder-adapter-trovo": "^1.0.0",
         "botkit": "^4.10.0"
     },
     "devDependencies": {}
