--- a/.env
+++ b/.env
@@ -1,24 +1,35 @@
-; This is the name of the stream. https://trovo.live/YourChannelName
-
+; Please edit these values with your details
 CHANNEL=YourChannelName
-
-; The exact display name of your bot. Case-sensitive.
-
 BOTNAME=BotName
-
-; The email address you used to sign up your bot.
-
 LOGIN=BotName@email.com
-
-; Password for you bot
-
 PASSWORD=MyPasswordForBot
-
-; Speed up boosts loading the bot by disallowing unneccessary sites.
-; If you have issues with the bot loading, this could be the reason.
-
 SPEEDUP=true
-
-; Headless browser. Only turn on if you need to see what the bot is doing
-; inside a web browser. Only recommended for experienced users.
 HEADLESS=true
+
+; INFORMATION
+;
+; Lines that begin with ; are comments
+;
+; CHANNEL is the last part of your trovo.live link, 
+; e.g. https://trovo.live/ChannelName channel is ChannelName
+;CHANNEL=ChannelName
+;
+; BOTNAME is the exact display name of your bot. Case is sensitive.
+; BOTNAME=BotName
+;
+; LOGIN is your email address you used to sign up your bot on trovo.
+;LOGIN=BotName@email.com
+;
+; PASSWORD is the password for your bot
+;PASSWORD=PasswordForBotName
+;
+; SPEEDUP improves loading times. It is enabled by default but it could
+; cause log in issues. If you are experiencing issues, you may need to 
+; disable this setting by changing it to false
+;SPEEDUP=false
+;
+; HEADLESS is the state the browser is in. Headless means the browser will
+; run in the background out of site. Disabling this setting by entering false
+; will launch a visible browser that the bot uses. Only disable it if you 
+; know what you are doing.
+;HEADLESS=true
