--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "main": "bot.js",
     "scripts": {
         "start": "node bot.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "postinstall": "echo \"Edit your .env file with your bot details\""
     },
     "dependencies": {
         "botbuilder": "^4.11.0",
