--- a/.env
+++ b/.env
@@ -29,7 +29,7 @@ HEADLESS=true
 ;SPEEDUP=false
 ;
 ; HEADLESS is the state the browser is in. Headless means the browser will
-; run in the background out of site. Disabling this setting by entering false
+; run in the background out of sight. Disabling this setting by entering false
 ; will launch a visible browser that the bot uses. Only disable it if you 
 ; know what you are doing.
 ;HEADLESS=true
